@@ -136,20 +136,10 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 						'type'              => 'boolean',
 						'validate_callback' => 'rest_validate_request_arg',
 					],
-					'statement_descriptor'               => [
-						'description'       => __( 'Bank account descriptor to be displayed in customers\' bank accounts.', 'woocommerce-gateway-stripe' ),
-						'type'              => 'string',
-						'validate_callback' => [ $this, 'validate_regular_statement_descriptor' ],
-					],
 					'is_short_statement_descriptor_enabled' => [
 						'description'       => __( 'When enabled, we\'ll include the order number for card and express checkout transactions.', 'woocommerce-gateway-stripe' ),
 						'type'              => 'boolean',
 						'validate_callback' => 'rest_validate_request_arg',
-					],
-					'short_statement_descriptor'         => [
-						'description'       => __( 'We\'ll use the short version in combination with the customer order number.', 'woocommerce-gateway-stripe' ),
-						'type'              => 'string',
-						'validate_callback' => [ $this, 'validate_short_statement_descriptor' ],
 					],
 					'is_debug_log_enabled'               => [
 						'description'       => __( 'When enabled, payment error logs will be saved to WooCommerce > Status > Logs.', 'woocommerce-gateway-stripe' ),
@@ -223,72 +213,6 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 	}
 
 	/**
-	 * Validate the regular statement descriptor.
-	 *
-	 * @param mixed           $value The value being validated.
-	 * @param WP_REST_Request $request The request made.
-	 * @param string          $param The parameter name, used in error messages.
-	 * @return true|WP_Error
-	 */
-	public function validate_regular_statement_descriptor( $value, $request, $param ) {
-		return $this->validate_statement_descriptor( $value, $request, $param, 22 );
-	}
-
-	/**
-	 * Validate the short statement descriptor.
-	 *
-	 * @param mixed           $value The value being validated.
-	 * @param WP_REST_Request $request The request made.
-	 * @param string          $param The parameter name, used in error messages.
-	 * @return true|WP_Error
-	 */
-	public function validate_short_statement_descriptor( $value, $request, $param ) {
-		$is_short_account_statement_enabled = $request->get_param( 'is_short_statement_descriptor_enabled' );
-
-		// bypassing validation to avoid errors in the client, it won't be updated under this condition
-		if ( ! $is_short_account_statement_enabled ) {
-			return true;
-		}
-
-		return $this->validate_statement_descriptor( $value, $request, $param, 10 );
-	}
-
-	/**
-	 * Validate the statement descriptor argument.
-	 *
-	 * @since 4.7.0
-	 *
-	 * @param mixed           $value The value being validated.
-	 * @param WP_REST_Request $request The request made.
-	 * @param string          $param The parameter name, used in error messages.
-	 * @param int             $max_length Maximum statement length.
-	 * @return true|WP_Error
-	 */
-	public function validate_statement_descriptor( $value, $request, $param, $max_length ) {
-		$string_validation_result = rest_validate_request_arg( $value, $request, $param );
-		if ( true !== $string_validation_result ) {
-			return $string_validation_result;
-		}
-
-		// Relaxing validation because it's blocking the user from saving it when they're on another tab of the settings screen
-		// TODO: work that out with either a UX approach or handling the validations of each tab separately
-		if ( '' === $value ) {
-			return true;
-		}
-
-		try {
-			$this->gateway->validate_account_statement_descriptor_field( $param, $value, $max_length );
-		} catch ( Exception $exception ) {
-			return new WP_Error(
-				'rest_invalid_pattern',
-				$exception->getMessage()
-			);
-		}
-
-		return true;
-	}
-
-	/**
 	 * Retrieve settings.
 	 *
 	 * @return WP_REST_Response
@@ -355,9 +279,7 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 		$this->update_is_manual_capture_enabled( $request );
 		$this->update_is_saved_cards_enabled( $request );
 		$this->update_is_separate_card_form_enabled( $request );
-		$this->update_account_statement_descriptor( $request );
 		$this->update_is_short_account_statement_enabled( $request );
-		$this->update_short_account_statement_descriptor( $request );
 
 		/* Settings > Advanced settings */
 		$this->update_is_debug_log_enabled( $request );
@@ -505,21 +427,6 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 	}
 
 	/**
-	 * Updates account statement descriptor.
-	 *
-	 * @param WP_REST_Request $request Request object.
-	 */
-	private function update_account_statement_descriptor( WP_REST_Request $request ) {
-		$account_statement_descriptor = $request->get_param( 'statement_descriptor' );
-
-		if ( null === $account_statement_descriptor ) {
-			return;
-		}
-
-		$this->gateway->update_validated_option( 'statement_descriptor', $account_statement_descriptor );
-	}
-
-	/**
 	 * Updates whether short account statement should be used.
 	 *
 	 * @param WP_REST_Request $request Request object.
@@ -532,27 +439,6 @@ class WC_REST_Stripe_Settings_Controller extends WC_Stripe_REST_Base_Controller 
 		}
 
 		$this->gateway->update_option( 'is_short_statement_descriptor_enabled', $is_short_account_statement_enabled ? 'yes' : 'no' );
-	}
-
-	/**
-	 * Updates short account statement descriptor.
-	 *
-	 * @param WP_REST_Request $request Request object.
-	 */
-	private function update_short_account_statement_descriptor( WP_REST_Request $request ) {
-		$is_short_account_statement_enabled = $request->get_param( 'is_short_statement_descriptor_enabled' );
-		$short_account_statement_descriptor = $request->get_param( 'short_statement_descriptor' );
-
-		// since we're bypassing the validation on the same condition, we shouldn't update it
-		if ( ! $is_short_account_statement_enabled ) {
-			return;
-		}
-
-		if ( null === $short_account_statement_descriptor ) {
-			return;
-		}
-
-		$this->gateway->update_validated_option( 'short_statement_descriptor', $short_account_statement_descriptor );
 	}
 
 	/**
